clear the GL buffer properly.

from http://bugs.freedesktop.org/show_bug.cgi?id=13358.